--- a/public/index.css
+++ b/public/index.css
@@ -9,7 +9,7 @@ body {
     display:flex;
     justify-content: center;
     background-color: rgb(24, 17, 29);
-    font-family: bariol;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .container {
@@ -26,35 +26,101 @@ body {
     padding-bottom: 2rem;
     font-size: xx-large;
     color: white;
+    font-family: bariol;
   }
   
 .footer {
-    padding-top: 3rem;
+    padding-top: 1rem;
     text-align: center;
     color: white;
+    font-family: bariol;
 }
 
 .middle {
     display: flex;
     flex-direction: row;
+    justify-content: center;
 }
 
 .rightside {
     display:flex;
+    flex-direction: column;
+    flex-grow: 25;
+    margin: 10px;
+}
+
+input[type=text], select {
+    padding: 8px 10px;
+    margin: 4px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+input[type=password], select {
+    padding: 8px 10px;
+    margin: 4px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+input[type=submit] {
+    background-color: rgb(60, 196, 64);
+    color: white;
+    padding: 8px 10px;
+    margin: 4px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+input[type=submit]:hover {
+    background-color: #6a946c;
+}
+
+.loginform {
     width: 100%;
-    justify-content: space-around;
+    text-align: center;
+    border-radius: 5px;
+    box-shadow: 0 0 0 2pt rgb(66, 69, 77);
+    color:white;
 }
 
 .tweet-container {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    background-color: indigo;
-    width: 100%;
+
+    flex-grow: 75;
 }
 
 .tweet {
     padding: 10px;
+    margin: 10px;
+    background-color: rgb(4, 42, 78);
+    border-radius: 10px;
+    color:white;
+}
+
+.tweetheader {
+    font-size: larger;
+    display: flex;
+    justify-content: space-between;
+}
+
+.date {
+    color:gray;
+}
+
+.text {
+
+}
+
+.vl {
+    border-left: 2px solid rgb(80, 80, 80);
 }
 
 @media only screen and (max-width: 600px) {
@@ -62,10 +128,13 @@ body {
       width: 100%;
     }
     .middle {
-        flex-direction: column;
+        flex-direction: column-reverse;
         font-size: larger;
     }
     .rightside {
-        background-color: red;
+        
+    }
+    .footer {
+        order: 10;
     }
   }
