--- a/public/index.css
+++ b/public/index.css
@@ -123,6 +123,16 @@ input[type=submit]:hover {
     border-left: 2px solid rgb(80, 80, 80);
 }
 
+.smallloggedin{
+    width: 100%;
+    text-align: center;
+    border-radius: 5px;
+    box-shadow: 0 0 0 2pt rgb(66, 69, 77);
+    color:white;
+    font-size: larger;
+    color:white;
+}
+
 @media only screen and (max-width: 600px) {
     .container {
       width: 100%;
